--- a/BankManagementSys/ManageCustomers.xaml
+++ b/BankManagementSys/ManageCustomers.xaml
@@ -25,7 +25,7 @@
         Margin="438,232,10,10">
             <StackPanel Width="31">
                 <Image Source="/SharedCode;Component/Images/exit.png"/>
-                <Label Content="To dashboard" HorizontalAlignment="Center" Margin="-24,0,-27,0" Width="82"/>
+                <Label Content="To Dashboard" HorizontalAlignment="Center" Margin="-24,0,-27,0" Width="82"/>
             </StackPanel>
         </Button>
 
