--- a/BankManagementSys/ManageExistingCustomers.xaml
+++ b/BankManagementSys/ManageExistingCustomers.xaml
@@ -26,10 +26,10 @@
         <Label Content="" HorizontalAlignment="Left" Margin="748,106,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="" HorizontalAlignment="Left" Margin="751,136,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Button Click="btBackToDashClicked"
-        Margin="629,287,44,25">
-            <StackPanel Width="31">
-                <Image Source="/SharedCode;Component/Images/exit.png"/>
-                <Label Content="To Manage Customers" HorizontalAlignment="Center" Margin="-24,0,-27,0" Width="82"/>
+        Margin="629,287,67,40">
+            <StackPanel Width="53" Height="97">
+                <Image Source="/SharedCode;Component/Images/exit.png" Height="72"/>
+                <Label Content="Back" HorizontalAlignment="Center" Margin="10,0,-22,0" Width="65" Height="24"/>
             </StackPanel>
         </Button>
         <RadioButton Name="rbNatId" Content="National Id" GroupName="CustSearch" IsChecked="True" HorizontalAlignment="Left" Margin="114,13,0,0" VerticalAlignment="Top"/>
