--- a/CustomerUI/ViewTransactions.xaml
+++ b/CustomerUI/ViewTransactions.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="View Transactions" Height="501" Width="697">
+        Title="View Transactions" Height="545.945" Width="697">
     <Grid>
         <Label Content="Select Account:" HorizontalAlignment="Left" Margin="145,63,0,0" VerticalAlignment="Top"/>
         <ComboBox Name="comboAccountType" HorizontalAlignment="Left" Margin="252,67,0,0" VerticalAlignment="Top" Width="186" SelectionChanged="comboAccountType_SelectionChanged">
@@ -33,26 +33,27 @@
         <Image HorizontalAlignment="Left" Height="100" Margin="24,18,0,0" Source="/SharedCode;Component/Images/johnabbottbank.png"  VerticalAlignment="Top" Width="100"/>
         <Label Name="lblBalance" FontWeight="Bold" Content="" HorizontalAlignment="Left" Margin="544,67,0,0" VerticalAlignment="Top" Width="107"/>
         <Button Name="btMakeTransfer" Click="btMakeTransfer_Click" 
-            Margin="24,161,565,230">
+            Margin="24,161,565,287">
             <StackPanel Width="80">
                 <Image Source="/SharedCode;component/Images/transfer.png" Height="41"/>
                 <Label Content="Make transfer" HorizontalAlignment="Right" Width="90" Margin="-2,0,-8,0"/>
             </StackPanel>
         </Button>
         <Button Name="btMakePayment" Click="btMakePayment_Click" 
-            Margin="24,250,565,142">
+            Margin="24,250,565,198">
             <StackPanel Width="80">
                 <Image Source="/SharedCode;component/Images/payment.png" Height="41"/>
                 <Label Content="Make payment" HorizontalAlignment="Right" Width="90" Margin="-4,0,-6,0"/>
             </StackPanel>
         </Button>
         <Button Name="btPDF" Click="btPDF_Click" 
-            Margin="24,337,565,53">
+            Margin="24,337,565,110">
             <StackPanel Width="80">
                 <Image Source="/SharedCode;component/Images/saveAsPDF.png" Height="41"/>
                 <Label Content="Save as .PDF" HorizontalAlignment="Right" Width="80"/>
             </StackPanel>
         </Button>
         <Label Content="* Double click on transaction to view receipt" HorizontalAlignment="Left" Margin="145,417,0,0" VerticalAlignment="Top" FontSize="10"/>
+        <Button Content="View spending reports" Name="btViewSpendRep" Click="btViewSpendRep_Click" HorizontalAlignment="Left" Margin="493,441,0,0" VerticalAlignment="Top" Width="129" Height="44"/>
     </Grid>
 </Window>
