--- a/CustomerUI/SpendReport.xaml
+++ b/CustomerUI/SpendReport.xaml
@@ -6,22 +6,22 @@
              xmlns:local="clr-namespace:CustomerUI"
              mc:Ignorable="d" d:DesignWidth="800" Height="467.81">
     <Grid>
-        <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="126" Margin="34,29,0,0" VerticalAlignment="Top" Width="250"/>
-        <Label Content="Account number:" HorizontalAlignment="Left" Margin="52,41,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="." Name="lblAccNumber" HorizontalAlignment="Left" Margin="174,41,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="Account type:" HorizontalAlignment="Left" Margin="52,73,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="." x:Name="lblAccType" HorizontalAlignment="Left" Margin="174,73,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="Balance:" HorizontalAlignment="Left" Margin="52,105,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="." x:Name="lblBalance" HorizontalAlignment="Left" Margin="174,105,0,0" VerticalAlignment="Top" Width="110"/>
-        <Label Content="Choose a time period to see spending report:" HorizontalAlignment="Left" Margin="417,23,0,0" VerticalAlignment="Top"/>
-        <Label Content="From:" HorizontalAlignment="Left" Margin="417,54,0,0" VerticalAlignment="Top"/>
-        <DatePicker Name="dpFromDate" HorizontalAlignment="Left" Margin="476,56,0,0" VerticalAlignment="Top" Width="191"/>
-        <Label Content="To:" HorizontalAlignment="Left" Margin="417,90,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="dpToDate" HorizontalAlignment="Left" Margin="476,90,0,0" VerticalAlignment="Top" Width="191"/>
-        <Button Name="btViewReport" Click="btViewReport_Click" Content="View report" HorizontalAlignment="Left" Margin="505,129,0,0" VerticalAlignment="Top" Width="75"/>
-        <StackPanel Background="Azure" HorizontalAlignment="Left" Height="269" Margin="313,175,0,0" VerticalAlignment="Top" Width="437"/>
-        <RadioButton Checked="rbPieChart_Checked" Name="rbPieChart" Content="Pie chart" GroupName="ChartType" IsChecked="True" HorizontalAlignment="Left" Margin="170,274,0,0" VerticalAlignment="Top"/>
-        <RadioButton Checked="rbBarGraph_Checked" Name="rbBarGraph" Content="Bar graph" GroupName="ChartType" HorizontalAlignment="Left" Margin="170,305,0,0" VerticalAlignment="Top"/>
-        <ContentControl Name="contentControl" Content="ContentControl" HorizontalAlignment="Left" Margin="313,176,0,0" VerticalAlignment="Top" Height="278" Width="437"/>
+        <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="126" Margin="26,29,0,0" VerticalAlignment="Top" Width="220"/>
+        <Label Content="Account number:" HorizontalAlignment="Left" Margin="44,41,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="." Name="lblAccNumber" HorizontalAlignment="Left" Margin="166,41,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="Account type:" HorizontalAlignment="Left" Margin="44,73,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="." x:Name="lblAccType" HorizontalAlignment="Left" Margin="166,73,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="Balance:" HorizontalAlignment="Left" Margin="44,105,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="." x:Name="lblBalance" HorizontalAlignment="Left" Margin="166,105,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="Choose period for spending report:" HorizontalAlignment="Left" Margin="24,246,0,0" VerticalAlignment="Top"/>
+        <Label Content="From:" HorizontalAlignment="Left" Margin="24,277,0,0" VerticalAlignment="Top"/>
+        <DatePicker Name="dpFromDate" HorizontalAlignment="Left" Margin="70,279,0,0" VerticalAlignment="Top" Width="151"/>
+        <Label Content="To:" HorizontalAlignment="Left" Margin="24,313,0,0" VerticalAlignment="Top"/>
+        <DatePicker x:Name="dpToDate" HorizontalAlignment="Left" Margin="70,313,0,0" VerticalAlignment="Top" Width="151"/>
+        <Button Name="btViewReport" Click="btViewReport_Click" Content="View report" HorizontalAlignment="Left" Margin="93,352,0,0" VerticalAlignment="Top" Width="75"/>
+        <StackPanel Background="Azure" HorizontalAlignment="Left" Height="269" Margin="252,175,0,0" VerticalAlignment="Top" Width="480"/>
+        <RadioButton Checked="rbPieChart_Checked" Name="rbPieChart" Content="Pie chart" GroupName="ChartType" IsChecked="True" HorizontalAlignment="Left" Margin="415,119,0,0" VerticalAlignment="Top"/>
+        <RadioButton Checked="rbBarGraph_Checked" Name="rbBarGraph" Content="Bar graph" GroupName="ChartType" HorizontalAlignment="Left" Margin="534,119,0,0" VerticalAlignment="Top"/>
+        <ContentControl Name="contentControl" Content="ContentControl" HorizontalAlignment="Left" Margin="252,176,0,0" VerticalAlignment="Top" Height="278" Width="480"/>
     </Grid>
 </UserControl>
