--- a/CustomerUI/CustProfile.xaml
+++ b/CustomerUI/CustProfile.xaml
@@ -1,26 +1,24 @@
-﻿<Window x:Class="CustomerUI.MyProfile"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CustomerUI"
-        mc:Ignorable="d"
-        Title="My Profile" Height="427.453" Width="451">
+﻿<UserControl x:Class="CustomerUI.CustProfile"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:CustomerUI"
+             mc:Ignorable="d" 
+             d:DesignHeight="485" d:DesignWidth="697">
     <Grid>
         <Label Content="Full Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Phone Number:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
-        <Label Content="National ID:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
-        <Label Content="Date of Birth:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblNatID" Content="National ID:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblDOB" Content="Date of Birth:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top"/>
         <Label Content="Address:" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top"/>
         <Label Content="City:" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top"/>
         <Label Content="Province/State:" HorizontalAlignment="Left" Margin="10,196,0,0" VerticalAlignment="Top"/>
         <Label Content="Country:" HorizontalAlignment="Left" Margin="10,258,0,0" VerticalAlignment="Top"/>
         <Label Content="Email:" HorizontalAlignment="Left" Margin="10,289,0,0" VerticalAlignment="Top"/>
         <TextBox Name="tbFullName" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,14,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <Label Content="Company Name:" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,320,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblCompanyName" Content="Company Name:" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,320,0,0" VerticalAlignment="Top"/>
         <Button Name="btUpdate" Click="btUpdate_Click" Content="Update Contact Info" HorizontalAlignment="Left" Margin="10,357,0,0" VerticalAlignment="Top" Width="136"/>
-        <Button Name="btCancel" IsCancel="True" Content="Cancel" HorizontalAlignment="Left" Margin="261,357,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Name="btOK" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="341,357,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="tbPhoneNo" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <TextBox Name="tbNationalID" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,76,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <TextBox Name="tbDOB" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,107,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
@@ -31,6 +29,6 @@
         <TextBox Name="tbPostalCode" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,231,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <TextBox Name="tbCountry" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,262,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
         <TextBox Name="tbEmail" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="116,293,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
-        <TextBox Name="tbCompanyName" IsEnabled="False" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="116,324,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
+        <TextBox Name="tbCompanyName" FontWeight="Bold" FontStyle="Italic" IsEnabled="False" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="116,324,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="300"/>
     </Grid>
-</Window>
+</UserControl>
